fix  issue where button gets too small when in flex container

--- a/packages/components/button/src/button.scss
+++ b/packages/components/button/src/button.scss
@@ -10,6 +10,7 @@
   color: var(--sl-color-foreground-secondary-bold);
   cursor: pointer;
   display: inline-flex;
+  flex-shrink: 0;
   font-weight: var(--sl-text-typeset-fontWeight-demibold);
   gap: var(--sl-size-075);
   justify-content: center;
